--- a/app/components/modules/Contact/contact.module.scss
+++ b/app/components/modules/Contact/contact.module.scss
@@ -35,6 +35,7 @@
 
   .address {
     font-size: 2rem;
+    color: black;
   }
 }
 
